fixed the alignment of clear and erase btn by putting them inside containerForButton

--- a/style.css
+++ b/style.css
@@ -21,13 +21,17 @@
     font-weight: bold;
 }
 
-.clearBtn{
+.clearBtn,.eraseBtn{
     height: 50px;
-    width: 200px;
-    /* margin-top: 5px;
-    margin-left: 35%; */
-    /* margin-left: 35%; */ 
+    width: 198px;
     font-weight: bold;
+}
+
+.containerForButton{
+    margin-left: 35%;
+    margin-top: 4px;;
+    display: flex;
+    gap: 4px;
 }
 
 
